JDK upgrade + update resources finder